--- a/2048.css
+++ b/2048.css
@@ -5,11 +5,19 @@ body{
     background-image: linear-gradient(to right, rgb(105, 105, 227), rgb(211, 147, 211))
 }
 
-h1 {
-    color: #fff;
+* {
+    -webkit-box-sizing: unset !important;
+    -moz-box-sizing: unset !important;
+    box-sizing:unset !important;
 }
 
-hr{
+#bootstrap-overrides h1 {
+    color: #fff;
+    font-size: 36px;
+    font-weight: 600;
+}
+
+#bootstrap-overrides hr{
     width: 500px;
     border: 2px solid white;
     border-radius: 4px;
@@ -22,6 +30,7 @@ hr{
     column-gap: 1vw;
     padding: 0.5vw 1vw 1vw;
 }
+
 .score-container{
     /* background-image: linear-gradient(to right, rgb(105, 105, 227), rgb(211, 147, 211)); */
     width: 90px;
@@ -32,6 +41,33 @@ hr{
     color: white;
     font-weight: 600;
     display: inline-block;
+}
+
+.score-container.new-game{
+    color: black;
+    width: 8rem;
+    height: 3rem;
+    background: #bb9cfe;;
+    padding: 0.2em 1em;
+    outline: none;
+}
+
+.score-container.new-game:hover{
+    background: #b09adf;
+}
+
+.score-container.new-game.how-to {
+    width: 9em;
+}
+
+.how-to-play-section {
+    padding: 1.5vw 1vw;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 #best-score, #score {
@@ -47,12 +83,34 @@ hr{
     width: 399px;
     height: 400px;
 
-    /* background-image: linear-gradient(to right, rgb(105, 105, 227), rgb(211, 147, 211)); */
-    /* border: 6px solid gray; */
-
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+}
+
+#game-over{
+    display: block;
+    visibility: hidden;
+    position: absolute;
+    padding: 132px 117px;
+    color: white;
+    font-size: 30px;
+    z-index: 5;
+    font-weight: 600;
+}
+
+#try-again{
+    display: block;
+    visibility: hidden;
+    position: absolute;
+    color: white;
+    font-size: 18px;
+    z-index: 5;
+    font-weight: 600;
+    background: #6945b4;
+    border-radius: 6px;
+    margin-top: 206px;
+    margin-left: 150px;
 }
 
 .tile {
@@ -61,79 +119,112 @@ hr{
     border: 5px solid #2a3f6c;
     border-radius: 15px;
 
-    font-size: 40px;
+    font-size: 3rem;
     font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+ 
+@keyframes show{
+    0% {
+        opacity: 0.5;
+        transform: scale(0);
+    }
+}
+
+.carousel-item{
+    min-height: 280px;
+}
 
 .x2 {
-    background-color: rgb(45, 143, 195);
+    background-color: rgb(46, 142, 194);
     color: black;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out;    
 }
 
 .x4{
     background-color: rgb(114, 23, 170);
     color: white;
+    animation: show 100ms ease;
+    transition: 100ms ease-in-out;
 }
 
 .x8 {
     background-color: rgb(126, 68, 157);
     color: white;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
 .x16 {
     background-color: rgb(163, 44, 185);
     color: #000; 
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
 .x32 {
     background-color: rgb(151, 34, 124);
-    color: #000;
+    color: #fff;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
 .x64 {
     background-color: rgb(75, 180, 212);
     color: #000;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
 .x128 {
-    background-color: aliceblue;
+    background-color: #d75acc;
     color: #000;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
 .x256 {
-    background-color: aliceblue;
+    background-color: #5474c6;
     color: #000;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
 .x512 {
-    background-color: aliceblue;
+    background-color: #639fd4c4;
     color: #000;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
 .x1024 {
-    background-color: aliceblue;
-    color: #000;
+   
+    background-color: #9f1fff;
+    color: #fff;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
 .x2048 {
-    background-color: aliceblue;
-    color: #000;
+    background-color: #ae71bc;
+    color: #fff;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
-.x{
-    background-color: aliceblue;
+.x4096{
+    background-color: #c29be4;
     color: #000;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
 
-.x{
-    background-color: aliceblue;
-    color: #000;
-}
-
-.x{
-    background-color: aliceblue;
-    color: #000;
+.x8192{
+    background-color: #b64084;
+    color: #fff;
+    animation: show 100ms ease;
+    transition: 500ms ease-in-out; 
 }
